--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,11 @@
 html {
     color: #222;
     font-ssdfdsize: 1em;
-    line-height: 1.4 asdasdasdasdasd; 
+    line-height: 1.4; 
+
+
+
+
 }
 
 /*
